# moonshot-ai-competitive-agent

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml  requirements.txt  run_pipeline.py
data/: README.md
docs/: architecture.md  limitations.md
plans/competitive-intelligence-dashboard/: implementation.md  plan.md
scripts/: seed_data.py
src/analysis/: clean_data.py  competitive.py  insights_generator.py  sentiment.py  themes.py
src/dashboard/: app.py  components.py  styles.css
src/dashboard/pages/: 01_Overview.py  02_Brand_Comparison.py  03_Product_Drilldown.py  04_Agent_Insights.py
src/scraper/: amazon_scraper.py  base.py  review_scraper.py  utils.py
