[project]
name = "munshot-competitive-intel"
version = "0.1.0"
description = "Competitive intelligence dashboard for luggage brands on Amazon India"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pandas>=2.1",
    "streamlit>=1.36",
    "plotly>=5.18",
    "beautifulsoup4>=4.12",
    "groq>=0.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
